tests/ui/fail/non_const_expr.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> tests/ui/fail/non_const_expr.rs:5:19
  |
5 |     let _ = nn64!(_value);
  |                   ^^^^^^ non-constant value
  |
help: consider using `let` instead of `const`
 --> src/lib.rs
  |
   -         const __SHOULD_BE_CONST_IN_ORDERED_FLOAT_MACROS: f64 = $expr;
   +         let __SHOULD_BE_CONST_IN_ORDERED_FLOAT_MACROS: f64 = $expr;
   |
